fix z-index

--- a/src/app/component/calendar-item/calendar-item.component.scss
+++ b/src/app/component/calendar-item/calendar-item.component.scss
@@ -14,8 +14,10 @@
         }
         >div {
             z-index: 0;
-            transition: transform 1s;
-            perspective: 120px;
+            transition: transform 1s, z-index 1s, box-shadow .5s;
+            perspective: 1px;
+            perspective-origin: 150% 150%;
+            transform-style: preserve-3d;
             position: absolute;
             &[data-left] {
                 left: 0;
@@ -30,7 +32,23 @@
     .opened {
         >div {
             z-index: 2;
-            transform: rotateY(120deg);
+            transform: rotateY(110deg) translateY(-1px);
+            box-shadow: 0 0 80px rgba(0, 0, 0, 0.5), inset 0 0 5px;
+            transition: transform 1s, z-index 1s, box-shadow .7s .3s;
         }
+    }
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+        z-index: 0;
+    }
+    99% {
+        opacity: 1;
+        z-index: 0;
+    }
+    100% {
+        z-index: 1;
     }
 }
